--- a/frontend/view/inc/header.html
+++ b/frontend/view/inc/header.html
@@ -11,12 +11,12 @@
 				<nav id="nav">
 					
 					<ul>
-						<li class="menu-click" id="menu-home"><a id="logo" href="#/home" data-tr="Home">Home</a></li>
-						<li class="menu-click" id="menu-shop"><a href="#/shop" data-tr="Shop">Shop</a></li>
+						<li class="menu-click" ng-class="{'current':c_menu==home}" id="menu-home"><a id="logo" href="#/home" data-tr="Home">Home</a></li>
+						<li class="menu-click" ng-class="c_menu" id="menu-shop"><a href="#/shop" data-tr="Shop">Shop</a></li>
 						
 						<!-- <li class="menu-click" id="menu-left-sidebar" ><a href="#">Left Sidebar</a></li>
 						<li class="menu-click" id="menu-right-sidebar"><a href="#">Right Sidebar</a></li> -->
-						<li class="menu-click" id="menu-contact"><a href="#/contact" data-tr="Contact">Contact</a></li>
+						<li class="menu-click" ng-class="{'current':c_menu==contact}" id="menu-contact"><a href="#/contact" data-tr="Contact">Contact</a></li>
 						<!-- <li class="menu-click" id="menu-no-sidebar"><a href="#">No Sidebar</a></li> -->
 						<li class="settings">
 							<a><img src="frontend/view/inc/images/settings.png"></a>
