Modul_Shop->(Filters,List Products,GMaps,Pagination)

--- a/frontend/view/inc/header.html
+++ b/frontend/view/inc/header.html
@@ -54,7 +54,7 @@
 							<div id="order">
 								<select class="order" ng-change="change_search()" ng-model="order">
 									<option value="">Sin Orden</option>
-									<option value="price">Precio</option>
+									<option value="precio">Precio</option>
 									<option value="kms">Kilometros</option>
 								</select>
 							</div>
