--- a/frontend/module/home/view/home.html
+++ b/frontend/module/home/view/home.html
@@ -69,7 +69,7 @@
 			<h2>Noticas</h2>
 		</header>
 		<div class="row" id="root-news">
-			<!-- <section ng-repeat="new in news" class="col-4 col-12-narrower">
+			<section ng-repeat="new in news" class="col-4 col-12-narrower">
 				<div class="box highlight zoom news" ng-click="redirect_new(new.url)" url="{{new.url}}">
 					<img src="{{new.image}}" class="newsImage">
 					<h3>{{new.title}}</h3>
@@ -77,7 +77,7 @@
 						{{new.content}}
 					</p>
 				</div>
-			</section> -->
+			</section>
 		</div>
 	</div>
 </section>
