--- a/frontend/module/login/view/login.html
+++ b/frontend/module/login/view/login.html
@@ -17,7 +17,7 @@
                     </div>        
                     <span class="error">{{error_log_password}}</span>
                 </label>
-                <p id="forgot-pass" class="forgot-pass">¿Has olvidado tu contraseña?</p>
+                <p id="forgot-pass" ng-click="recover_password()" class="forgot-pass">¿Has olvidado tu contraseña?</p>
                 <button type="button" id="login" ng-click="submit_login()" class="submit">Iniciar Sesion</button>
                 <div id="social_login" class="social_login"> 
                     <div class="white-line"></div>
