Modul_Login->(Social_Login),Services->(Service_social_login,Service_Auth0),Backend->(Auth0.ini,Auth0.getCredentials)

--- a/frontend/module/login/view/login.html
+++ b/frontend/module/login/view/login.html
@@ -21,8 +21,8 @@
                 <button type="button" id="login" ng-click="submit_login()" class="submit">Iniciar Sesion</button>
                 <div id="social_login" class="social_login"> 
                     <div class="white-line"></div>
-                    <i id="github" class="fa-brands fa-github fa-3x rrss_img zoom"></i>
-                    <i id="google" class="fa-brands fa-google fa-3x rrss_img zoom"></i>
+                    <i id="github" ng-click="log_github()" class="fa-brands fa-github fa-3x rrss_img zoom"></i>
+                    <i id="google" ng-click="log_google()" class="fa-brands fa-google fa-3x rrss_img zoom"></i>
                 </div>
         </div>
         <div class="sub-cont">
