--- a/frontend/module/shop/view/shop.html
+++ b/frontend/module/shop/view/shop.html
@@ -66,7 +66,7 @@
                                 <th>{{car.kms}} kms</th>
                             </table>
                         </div>
-                        <div class="like {{like_class}}" ng-class="{'like-focus':like_focus_{{car.id_coche}}}" ng-click="clickLike(car.id_coche)" ng id="like{{car.id_coche}}"></div>
+                        <div class="like {{like_class}}" ng-class="{'like-focus':like_focus_{{car.id_coche}}}" ng-click="clickLike()" ng id="like{{car.id_coche}}"></div>
                     </div>
                 </div>
                 <div class="pagination">
