Services->(Modal),Components->(Modal)

--- a/frontend/view/inc/header.html
+++ b/frontend/view/inc/header.html
@@ -80,8 +80,10 @@
 					</div>
 				</nav>
 				
-				<div id="simple_modal">
+				<div id="simple_modal" class="modal open" ng-show="modal_state">
+					<simple-modal></simple-modal>
 				</div>
+
 		</div>
 </div>
 	
