Services->(Activity(SecureLogin))

--- a/frontend/view/inc/header.html
+++ b/frontend/view/inc/header.html
@@ -80,7 +80,7 @@
 					</div>
 				</nav>
 				
-				<div id="simple_modal" class="modal open" ng-show="modal_state">
+				<div id="simple_modal" class="modal" ng-class="{'open':modal_state}">
 					<simple-modal></simple-modal>
 				</div>
 
